--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
         <div class="container">
           <ul class="advantages-list list">
             <li class="advantages-item">
-              <a class="advantages-link link" href="">
+              <div class="advantages-logo">
                 <svg class="team-soc-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="advantages-subtitle">Strategy</h3>
               <p class="advantages-text">
                 Our goal is to identify the business problem to walk away with
@@ -83,11 +83,11 @@
               </p>
             </li>
             <li class="advantages-item">
-              <a class="advantages-link link" href="">
+              <div class="advantages-logo">
                 <svg class="team-soc-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="advantages-subtitle">Punctuality</h3>
               <p class="advantages-text">
                 Bring the key message to the brand's audience for the best price
@@ -95,11 +95,11 @@
               </p>
             </li>
             <li class="advantages-item">
-              <a class="advantages-link link" href="">
+              <div class="advantages-logo">
                 <svg class="team-soc-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
-              </a>
+              </div>
               <h3 class="advantages-subtitle">Diligence</h3>
               <p class="advantages-text">
                 Research and confirm brands that present the strongest digital
@@ -107,11 +107,11 @@
               </p>
             </li>
             <li class="advantages-item">
-              <a class="advantages-link link" href="">
+              <div class="advantages-logo">
                 <svg class="team-soc-icon" width="64" height="64">
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
-              </a>
+              </div>   
               <h3 class="advantages-subtitle">Technologies</h3>
               <p class="advantages-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -389,7 +389,7 @@
           </p>
         </div>
         <div>
-          <h2 class="footer-title">Social media</h2>
+          <p class="footer-soc-text">Social media</p>
           <ul class="footer-soc-list list">
             <li class="footer-soc-item">
               <a class="footer-soc-link link" href="">
