--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
         <div class="container">
           <ul class="portfolio-list list">
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/banking-app.jpg"
                   alt="Banking app"
@@ -97,7 +97,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/cashless-paymen.jpg"
                   alt="Cashless payment"
@@ -111,7 +111,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/laptop-and-phone.jpg"
                   alt="Laptop and phone"
@@ -125,7 +125,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/Car.jpg"
                   alt="Car, interior view"
@@ -139,7 +139,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/screen-illustrations.jpg"
                   alt="Screen illustrations"
@@ -153,7 +153,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/girl-with-phone.jpg"
                   alt="Girl with phone"
@@ -167,7 +167,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/instagram-stories-concept.jpg"
                   alt="Instagram stories concept"
@@ -181,7 +181,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href="">
+              <a class="portfolio-link link" href="">
                 <img
                   src="./images/girl-with-vegetables.jpg"
                   alt="Girl with vegetables"
@@ -195,7 +195,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a class="link" href=""
+              <a class="portfolio-link link" href=""
                 ><img
                   src="./images/coffee.jpg"
                   alt="Barista makes fresh coffee"
